--- a/provisioner/config.env
+++ b/provisioner/config.env
@@ -1,10 +1,10 @@
-export AZURE_REGION="uswest2"
+export AZURE_REGION="westus2"
 export LOCATION_ZONE_1_SUFFIX="1"
 export LOCATION_ZONE_2_SUFFIX="2"
-export LOCATION_ZONE_2_SUFFIX="3"
+export LOCATION_ZONE_3_SUFFIX="3"
 export LOCATION_ZONE_1="${AZURE_REGION}-${LOCATION_ZONE_1_SUFFIX}"
 export LOCATION_ZONE_2="${AZURE_REGION}-${LOCATION_ZONE_2_SUFFIX}"
 export LOCATION_ZONE_3="${AZURE_REGION}-${LOCATION_ZONE_3_SUFFIX}"
 export AZURE_IMAGE="/subscriptions/42a27881-f23d-49bc-abfa-375e323fe957/resourceGroups/RHCOS_SATELLITE_RESOURCES/providers/Microsoft.Compute/galleries/coreos/images/coreos_azure"
-export LOCATION_ID="azure-location-demo-1"
+export LOCATION_ID="azure-location-demo-3"
 export MANAGED_FROM_LOCATION="dal"
