--- a/provisioner/worker-pool-metadata/azure-location-demo-3/control-plane-westus2-1.env
+++ b/provisioner/worker-pool-metadata/azure-location-demo-3/control-plane-westus2-1.env
@@ -1,5 +1,5 @@
 export ZONE_SUFFIX="1"
-export ZONE="uswest2-${ZONE_SUFFIX}"
+export ZONE="westus2-${ZONE_SUFFIX}"
 export INSTANCE_TYPE="Standard_D8as_v5"
 export COUNT="2"
 export HOST_LABELS="worker-pool=${CLUSTERID}-cp-$ZONE"
