--- a/provisioner/worker-pool-metadata/azure-location-demo-3/control-plane-westus2-2.env
+++ b/provisioner/worker-pool-metadata/azure-location-demo-3/control-plane-westus2-2.env
@@ -1,8 +1,10 @@
-export ZONE_SUFFIX="3"
-export ZONE="uswest2-${ZONE_SUFFIX}"
+export ZONE_SUFFIX="2"
+export ZONE="westus2-${ZONE_SUFFIX}"
 export INSTANCE_TYPE="Standard_D8as_v5"
 export COUNT="2"
 export HOST_LABELS="worker-pool=${CLUSTERID}-cp-$ZONE"
 export TAGS="HOST_LABELS=${HOST_LABELS}"
 export DISK_DEFS="100"
+
+
 
