--- a/provisioner/worker-pool-metadata/azure-demo-4-d-3/odf-westus2-1.env
+++ b/provisioner/worker-pool-metadata/azure-demo-4-d-3/odf-westus2-1.env
@@ -4,5 +4,5 @@ export INSTANCE_TYPE="Standard_D16as_v5"
 export COUNT="3"
 export HOST_LABELS="worker-pool=${CLUSTERID}-odf-$ZONE"
 export TAGS="HOST_LABELS=${HOST_LABELS}"
-export DISK_DEFS="100 100 500"
+export DISK_DEFS="100 500"
 
