--- a/provisioner/config.env
+++ b/provisioner/config.env
@@ -5,8 +5,8 @@ export LOCATION_ZONE_3_SUFFIX="3"
 export LOCATION_ZONE_1="${AZURE_REGION}-${LOCATION_ZONE_1_SUFFIX}"
 export LOCATION_ZONE_2="${AZURE_REGION}-${LOCATION_ZONE_2_SUFFIX}"
 export LOCATION_ZONE_3="${AZURE_REGION}-${LOCATION_ZONE_3_SUFFIX}"
-export AZURE_IMAGE="/subscriptions/42a27881-f23d-49bc-abfa-375e323fe957/resourceGroups/RHCOS_SATELLITE_RESOURCES/providers/Microsoft.Compute/galleries/coreos/images/coreos_azure"
+export AZURE_IMAGE="/subscriptions/8d948b89-6767-40b8-a839-cc773b4b62d4/resourceGroups/RHCOS_SATELLITE_RESOURCES/providers/Microsoft.Compute/images/rhcos-410.84.202210040010-0-azure-westus2"
 export LOCATION_ID="azure-demo-4"
 export MANAGED_FROM_LOCATION="dal"
 export HOST_LINK_AGENT_ENDPOINT=c-01-ws.us-south.link.satellite.cloud.ibm.com
-export DOWNSTREAM_CLUSTER_OC_VERSION="4.12_openshift"
+export DOWNSTREAM_CLUSTER_OC_VERSION="4.10_openshift"
